--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(TP)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(TP GRR/main.cpp GRR/Graph.h GRR/SmartMatrix.h GRR/command_struct.h)
+add_executable(TP lab3/command_struct2.h lab3/point_struct.h lab3/polygon_struct.h lab3/main.cpp lab3/iofmtguard.h)
